在个人信息中添加远程登录历史记录统计

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -757,6 +757,7 @@ en:
   label_action_add_roles: Select Roles
   label_irm_person_add_to_support_group: Add to Support Group
   label_irm_person_template_flag: Template
+  label_irm_person_security_flag: Security Flag
   label_irm_person_access_system: Accessible Systems
   label_irm_person_add_to_company: Add to Company
   label_irm_person_add_to_system: Add to External System
