--- a/modules/com/config/locales/zh.yml
+++ b/modules/com/config/locales/zh.yml
@@ -4,7 +4,9 @@ zh:
   label_com_config_relation_type_name: 配置项关系类型名称
   label_com_config_relation_type_description: 配置项关系类型说明
 
-  label_irm_config_relation_member_list: 配置项分类列表
+  label_com_config_relation_member_list: 适用的配置项分类列表
+  label_com_config_relation_member: 适用的配置项分类
+  label_com_config_relation_member_class_name: 适用的配置项分类名称
 
   #=========================com config classes=======================#
   label_com_config_class: 配置项分类
