--- a/modules/com/config/locales/zh.yml
+++ b/modules/com/config/locales/zh.yml
@@ -8,6 +8,7 @@ zh:
   label_com_config_class_name: 名称
   label_com_config_class_description: 描述
   label_com_config_class_leaf_flag: 叶子节点
+  label_com_config_class_parent: 所属父类
   #=========================end com config classes=======================#
 
   #=========================com config classes=======================#
@@ -19,5 +20,6 @@ zh:
   label_com_config_attribute_name: 名称
   label_com_config_attribute_description: 描述
   label_com_config_attribute_input_type: 属性输入类型
-  label_com_config_attribute_value_from: 值来源
+  label_com_config_attribute_input_value: 值来源
+  config_class_attribute_required_flag: 必填
   #=========================end com config classes=======================#
