添加配置属性来源显示； 添加含有子节点的配置分类在编辑的时候不能对叶子节点属性进行修改判断

--- a/modules/com/config/locales/zh.yml
+++ b/modules/com/config/locales/zh.yml
@@ -19,6 +19,7 @@ zh:
   label_com_config_class_description: 描述
   label_com_config_class_leaf_flag: 叶子节点
   label_com_config_class_parent: 所属父类
+  label_config_class_attribute_extend: 继承父类
   #=========================end com config classes=======================#
 
   #=========================com config attributes=======================#
