Feature #1232 配置项管理，左边树形菜单

--- a/modules/com/config/locales/en.yml
+++ b/modules/com/config/locales/en.yml
@@ -32,6 +32,7 @@ en:
 
   #==========================config item==================================#
   label_com_config_item: Configuration Item
+  label_com_config_item_all_class: All Classes
   label_com_config_item_list: Configuration Item List
   label_com_config_item_number: Configuration Item Number
   label_com_config_item_config_class: Configuration Class
