--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1560,6 +1560,7 @@ en:
   label_irm_operation_unit_description: Description
   label_irm_operation_unit_license: License
   label_irm_operation_unit_list: Operation Units
+  label_irm_operation_unit_admin: Administrator
   #======================= end Operation Unit ====================
 
   #=========================    irm external_systems_controller=======================#
