报表添加自动运行字段，新建和编辑的时候能够对该属性进行设置和修改

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -901,6 +901,7 @@ en:
   label_irm_report_record_count: Record Count
   label_irm_report_params_config: Report Parameters Config
   label_irm_report_params_default_value: Default Value
+  label_irm_report_auto_run_flag: Auto Run
   #========================= end irm reports ===================================
   #========================= irm report column ===================================
   label_irm_report_setup_group_column_header: 设置数据列 分组
