feature 按照黄耿项目要求，在事故单增加estimated_date，计划完成日期属性

--- a/config/locales/icm/en.yml
+++ b/config/locales/icm/en.yml
@@ -150,6 +150,7 @@ en:
   label_icm_incident_request_incident_category: Category
   label_icm_incident_request_incident_sub_category: Subcategory
   label_icm_incident_request_relation_type: The Relation
+  label_icm_incident_request_estimated_date: Estimated Date
   #========================= end icm incident_requests_controller=======================#
   #=========================    icm incident_journals_controller=======================#
   label_icm_incident_reply_support_group_id: Referred group
