封装系统中附件上传，便于统一维护

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -147,6 +147,7 @@ zh:
   search_options_with_dot: 搜索选项...
   search_options: 搜索选项
   search_all: 搜索全部
+  label_attachment_info: 附件信息
   #=========================end usual custom=======================#
   #=========================    irm lookup_types_controller=====================#
   label_lookup_types: 快速编码类型
