feature: 报表：事故单优先级为最高的事故单比例（%） 描述： 统计选定月份内提交的事故单中，按应用系统分类，优先级为高的比例 参数： 1.日期: 月份 2.应用系统 列：高优先级数量，总数，比例 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1772,3 +1772,11 @@ en:
   label_irm_oauth_token_unavailable: Unavailabled Token
   label_irm_oauth_username_or_password_error: Username Or Password Error
   #============================== end oauth_authorize ===================================
+
+  #============================== highest_priority_incident report ===================================
+  label_date: Date
+  label_highest_priority_incident_hightest_amount: Highest Amount
+  label_total_amount: Amount
+  label_percentage: Percentage
+  label_statistic_date: Reference Date
+  #============================== end highest_priority_incident ===================================
