报表：通过一线支持解决的事故比例（%） 描述： 统计选定月份内关闭的，而且没有经过升级的事故单数量，与全部关闭事故单数量的比例 参数： 1.日期: 月份 2.应用系统 列：一线解决数量，解决总数 行：应用系统

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1815,8 +1815,12 @@ zh:
 
   #============================== highest_priority_incident report ===================================
   label_date: 日期
-  label_highest_priority_incident_hightest_amount: 最高优先级
+  label_highest_priority_incident_highest_amount: 最高优先级
   label_total_amount: 总数
   label_percentage: 比例
   label_statistic_date: 统计日期
   #============================== end highest_priority_incident ===================================
+  #============================== first line solved report ===================================
+  label_first_line_solved_amount: 一线解决数量
+  label_total_solved_amount: 解决事故总数
+  #============================== end first line solved ===================================
