--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1775,8 +1775,12 @@ en:
 
   #============================== highest_priority_incident report ===================================
   label_date: Date
-  label_highest_priority_incident_hightest_amount: Highest Amount
+  label_highest_priority_incident_highest_amount: Highest Amount
   label_total_amount: Amount
   label_percentage: Percentage
   label_statistic_date: Reference Date
   #============================== end highest_priority_incident ===================================
+  #============================== first line solved report ===================================
+  label_first_line_solved_amount: First-line Solved
+  label_total_solved_amount: Solved Amount
+  #============================== end first line solved ===================================
