报表：事故单平均处理时间（分钟） 描述： 统计选定月份内关闭的事故单，从新建成功到最后一次关闭所花费的时间/该月份内关闭的事故单总数 参数： 1.日期: 月份 2.应用系统 列：平均处理时间，关闭事故单总数 行：应用系统

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1824,3 +1824,7 @@ zh:
   label_first_line_solved_amount: 一线解决数量
   label_total_solved_amount: 解决事故总数
   #============================== end first line solved ===================================
+  #============================== icm average processing time report ===================================
+  label_total_solved_time: 解决总耗时(分钟)
+  label_total_solved_average_time: 平均处理时间(分钟/单)
+  #============================== end icm average processing time ===================================
