报表：被错误分派的事故比例（%） 描述： 统计选定月份内关闭的事故单，跨组转交的事故单与总数的比例 参数： 1.日期: 月份 2.应用系统 列：错误分派数，错误分派比例，关闭事故单总数 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1784,3 +1784,7 @@ en:
   label_first_line_solved_amount: First-line Solved
   label_total_solved_amount: Solved Amount
   #============================== end first line solved ===================================
+  #============================== icm average processing time report ===================================
+  label_total_solved_time: Total Solved Time(mins)
+  label_total_solved_average_time: Avg. Solved Time(mins/sheet)
+  #============================== end icm average processing time ===================================
