报表：再分派的事故单比例（%） 描述： 统计选定月份内关闭的事故单，转交次数超过（包含）2次的事故单与总数的比例 参数： 1.日期: 月份 2.应用系统 列：再分派总数，再分派比例比例，关闭事故单总数 行：应用系统

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1832,3 +1832,7 @@ zh:
   label_icm_total_wrong_assigned: 错误分派数
   label_icm_wrong_assigned_rate: 错误分派比例
   #============================== end icm wrong assign rate ===================================
+  #============================== icm secondary assign rate report ===================================
+  label_icm_total_secondary_assigned: 二次分派数
+  label_icm_secondary_assigned_rate: 二次分派分派比例
+  #============================== end icm secondary assign rate ===================================
