--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1788,3 +1788,7 @@ en:
   label_total_solved_time: Total Solved Time(mins)
   label_total_solved_average_time: Avg. Solved Time(mins/sheet)
   #============================== end icm average processing time ===================================
+  #============================== icm wrong assign rate report ===================================
+  label_icm_total_wrong_assigned: Wrong Assigned
+  label_icm_wrong_assigned_rate: Wrong Assigned Rate
+  #============================== end icm wrong assign rate ===================================
