报表：通过知识库解决事故比例(%) 描述： 统计选定月份内关闭的事故单，通过调用知识库来回复的事故单与总数的比例 参数： 1.日期: 月份 2.应用系统 列：调用知识总数，调用知识比例，事故单总数 行：应用系统

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1836,3 +1836,7 @@ zh:
   label_icm_total_secondary_assigned: 二次分派数
   label_icm_secondary_assigned_rate: 二次分派分派比例
   #============================== end icm secondary assign rate ===================================
+  #============================== skm solved rate report ===================================
+  label_skm_solved_amount: 知识库解决事故数量
+  label_skm_solved_rate: 知识库解决事故比例
+  #============================== end skm solved rate ===================================
