--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1792,3 +1792,11 @@ en:
   label_icm_total_wrong_assigned: Wrong Assigned
   label_icm_wrong_assigned_rate: Wrong Assigned Rate
   #============================== end icm wrong assign rate ===================================
+  #============================== icm secondary assign rate report ===================================
+  label_icm_total_secondary_assigned: Secondary Assigned
+  label_icm_secondary_assigned_rate: Secondary Assigned Rate
+  #============================== end icm secondary assign rate ===================================
+  #============================== skm solved rate report ===================================
+  label_skm_solved_amount: Skm Solved Amount
+  label_skm_solved_rate: Skm Solved Rate
+  #============================== end skm solved rate ===================================
