报表：一次性正确解决事故的比例（%） 描述： 统计选定月份内关闭的事故单，只有一次运维人员的回复的比例 参数： 1.日期: 月份 2.应用系统 列：一次性解决总数，比例，事故单总数 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1800,3 +1800,7 @@ en:
   label_skm_solved_amount: Skm Solved Amount
   label_skm_solved_rate: Skm Solved Rate
   #============================== end skm solved rate ===================================
+  #============================== icm once solved rate report ===================================
+  label_icm_once_solved_amount: Once Solved Amount
+  label_icm_once_solved_rate: Once Solved Rate
+  #============================== end icm once solved rate ===================================
