报表：导致变更的事故统计 描述： 统计选定月份内，从事故单生成RFC的总数, 比率统计方式为：该月份内被更改为RFC的总数/该月份内被更改为RFC的总数+该月份内提交的事故单总数 参数： 1.日期: 月份 2.应用系统 列：生成RFC数量, 事故单总数, 转换RFC比率 行：应用系统

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1844,3 +1844,7 @@ zh:
   label_icm_once_solved_amount: 一次性解决数量
   label_icm_once_solved_rate: 一次性解决比例
   #============================== end icm once solved rate ===================================
+  #============================== icm to rfc rate report ===================================
+  label_icm_to_rfc_amount: 生成RFC总数
+  label_icm_to_rfc_rate: 生成RFC比例
+  #============================== end icm to rfc rate ===================================
