报表：已关闭事故重新打开的统计 描述： 统计选定的系统中，已经关闭但是因为种种原因又重新打开的事故单数量及对应比例 参数： 应用系统 列：重新打开总数，比例，关闭总数 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1804,3 +1804,7 @@ en:
   label_icm_once_solved_amount: Once Solved Amount
   label_icm_once_solved_rate: Once Solved Rate
   #============================== end icm once solved rate ===================================
+  #============================== icm reopen rate report ===================================
+  label_icm_reopen_amount: Reopen Amount
+  label_icm_reopen_rate: Reopen Rate
+  #============================== end icm reopen rate ===================================
