报表：被升级事故单比例（%） 描述： 统计选定的时间范围内，提交到服务台，并出现升级操作的事故单总数，与总提交数量的比例 参数： 日期：月 应用系统 列：出现升级的事故单总数，提交的事故单总数，比例 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1808,3 +1808,7 @@ en:
   label_icm_reopen_amount: Reopen Amount
   label_icm_reopen_rate: Reopen Rate
   #============================== end icm reopen rate ===================================
+  #============================== icm upgrade rate report ===================================
+  label_icm_upgrade_amount: Upgrade Amount
+  label_icm_upgrade_rate: Upgrade Rate
+  #============================== end icm upgrade rate ===================================
