报表：服务台接受事故单总数（按照时间段统计） 描述： 统计选定的时间范围内，提交到服务台的事故单总数 参数： 日期：天，从-至 应用系统 列：提交的事故单总数 行：日期

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1812,3 +1812,6 @@ en:
   label_icm_upgrade_amount: Upgrade Amount
   label_icm_upgrade_rate: Upgrade Rate
   #============================== end icm upgrade rate ===================================
+  #============================== icm incident amount by day report ===================================
+  label_icm_receive_amount: Received Amount
+  #============================== end icm incident amount by day  ===================================
