报表：服务台直接解决事故单的比例 描述： 统计选定的时间范围内关闭的事故单中，没有经过转交、升级就完成的数量，和总数的比例 参数： 日期：月 应用系统 列：直接解决数量，总数，比例 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1815,3 +1815,7 @@ en:
   #============================== icm incident amount by day report ===================================
   label_icm_receive_amount: Received Amount
   #============================== end icm incident amount by day  ===================================
+  #============================== icm helpdesk solved rate report ===================================
+  label_icm_helpdesk_solved_amount: Helpdesk Solved Amount
+  label_icm_helpdesk_solved_rate: Helpdesk Solved Rate
+  #============================== end icm helpdesk solved rate day  ===================================
