报表：被拒绝的变更申请统计（数量、比例） 描述： 统计选定的时间范围内审批不同过的变更请求数量及比例 参数： 日期：月 应用系统 列：拒绝数量，提交审批总数，拒绝比例 行：应用系统

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1819,3 +1819,8 @@ en:
   label_icm_helpdesk_solved_amount: Helpdesk Solved Amount
   label_icm_helpdesk_solved_rate: Helpdesk Solved Rate
   #============================== end icm helpdesk solved rate day  ===================================
+  #============================== chm rejected request rate report ===================================
+  label_chm_rejected_amount: Rejected Amount
+  label_chm_rejected_rate: Rejected Rate
+  label_chm_approval_amount: Approval Amount
+  #============================== end chm rejected request rate day  ===================================
