--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -1863,3 +1863,8 @@ zh:
   label_icm_helpdesk_solved_amount: 服务台直接解决单数
   label_icm_helpdesk_solved_rate: 服务台直接解决比例
   #============================== end icm helpdesk solved rate day  ===================================
+  #============================== chm rejected request rate report ===================================
+  label_chm_rejected_amount: 请求拒绝总数
+  label_chm_rejected_rate: 拒绝比例
+  label_chm_approval_amount: 审批总数
+  #============================== end chm rejected request rate day  ===================================
