运维中心设置==>云运维中心 所有页面bootstrap样式

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1556,6 +1556,7 @@ en:
   #======================= end password policies ====================
 
   #======================= Operation Unit ====================
+  label_irm_operation_unit_new: New Operation Unit
   label_irm_operation_unit_edit: Operation Unit Setting
   label_irm_operation_unit_name: Name
   label_irm_operation_unit_short_name: Short Name
