报表：运维人员工作量排名 描述： 对每月工作量前5的运维人员进行排名,工作量统计规则为，选定时间内关闭，且当前处理人员为该运维人员的，则计算1个工作量 参数： 日期：月 列：排名，处理数量 行：运维人员

--- a/config/locales/irm/en.yml
+++ b/config/locales/irm/en.yml
@@ -1824,3 +1824,8 @@ en:
   label_chm_rejected_rate: Rejected Rate
   label_chm_approval_amount: Approval Amount
   #============================== end chm rejected request rate day  ===================================
+  #============================== chm rejected request rate report ===================================
+  label_icm_rank: Rank
+  label_icm_workload: Workload
+  label_icm_workload_rate: Rate
+  #============================== end chm rejected request rate day  ===================================
