1,美化数据表格 2,修正javascript 数组 indexOf函数在IE中无法使用的错误 3,修改页面加载mask的实现

--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -104,7 +104,7 @@ zh:
   failed_copyed:  复制数据失败
   failed_deleted:  删除数据失败
   label_delete_confirm: 你确定要删除该条数据吗?
-  label_no_data: 没有找到数据
+  label_no_data: 无可用数据
   label_sub_functions: 功能
   label_common_info: 一般信息
   label_description_info: 描述信息
