--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -900,6 +900,7 @@ zh:
   label_action_run: 运行
   label_irm_report_new_custom: 新建自定义报表
   label_irm_report_new_program: 新建编程报表
+  label_irm_report_edit_program: 编辑编程报表
   label_irm_report_apply_params: 应用报表参数
   label_irm_report_chart_type: 图表类型
   label_irm_report_record_count: 记录数
