--- a/config/locales/irm/zh.yml
+++ b/config/locales/irm/zh.yml
@@ -95,6 +95,7 @@ zh:
   collapse_all: 全部折叠
   #常用语句
   notice_account_invalid_creditentials: 用户名或密码错误
+  successfully_updated_password: 成功修改密码！
   successfully_updated: 已经成功更新数据
   successfully_created: 已经成功创建新数据
   successfully_copyed:  已经成功复制数据
