--- a/config/locales/skm/zh.yml
+++ b/config/locales/skm/zh.yml
@@ -9,6 +9,9 @@ zh:
   label_skm_entry_status_edit: 修改知识文章状态
   label_skm_entry_status_code: 状态编码
   label_skm_entry_status_list: 知识文章状态列表
+  label_skm_rating_7: 有用
+  label_skm_rating_8: 学习
+  label_skm_rating_5: 无用
 
   #========================entry templates===============================
   label_skm_entry_template: 知识文章模板
