--- a/config/locales/csi/en.yml
+++ b/config/locales/csi/en.yml
@@ -35,6 +35,8 @@ en:
    label_csi_survey_result_chart: Survey Result Chart
    result: Result
    export: Export
+   export_xls: Export Excel
+   export_pdf: Export PDF
    range: Range
    label_csi_survey_joined_count: Joined
    label_csi_survey_person_count: Total People
